update Dockerfile for fix docker build issue

--- a/save-into-server/Dockerfile
+++ b/save-into-server/Dockerfile
@@ -1,21 +1,14 @@
-# Use a lightweight Node.js image
-FROM node:18-alpine
+FROM node:24-alpine
 
-# Create app directory
 WORKDIR /app
 
-# Install build tools for SQLite (required for Alpine Linux)
 RUN apk add --no-cache python3 make g++
 
-# Copy package files and install dependencies
-COPY package*.json ./
-RUN npm install --production
+RUN npm init -y
+RUN npm install express socket.io sqlite3 body-parser cors
 
-# Copy the rest of the application code
 COPY . .
 
-# Expose the port the app runs on
 EXPOSE 3100
 
-# Start the server
 CMD ["node", "server.js"]
